# kafka-sandbox

./: .travis.yml  README.md  docker-compose.yaml
avro-compatibility/: README.md  backward.md  forward.md  full.md
avro-compatibility/schemas/backward/: v1.avsc  v2.avsc
avro-compatibility/schemas/forward/: v1.avsc  v2.avsc
avro-compatibility/schemas/full/: v1.avsc  v2.avsc
dotnet/: .gitignore  README.md  kafka.csproj
dotnet/src/Sandbox/Kafka/: Consumer.cs  Producer.cs
dotnet/src/Sandbox/Kafka/Avro/: GenericAvroConsumer.cs  GenericAvroProducer.cs
java/: README.md  build.gradle  lombok.config  settings.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/kafka-common/: build.gradle
java/kafka-integration-test/: build.gradle
java/kafka-request-reply/: build.gradle
java/kafka-request-reply/src/main/resources/: application.yml  logback-spring.xml
java/src/integrationTest/resources/: log4j.properties
java/src/main/java/sandbox/kafka/consumer/: Consumer.java  ConsumerConfig.java
java/src/main/java/sandbox/kafka/producer/: Message.java  Producer.java  ProducerConfig.java
java/src/test/java/sandbox/kafka/consumer/: ConsumerConfigTests.java  ConsumerTests.java
java/src/testFixtures/avro/: Thingy.avsc
java/src/testFixtures/proto/: Thingy.proto
python/: .gitignore  README.md  requirements.txt  setup.cfg
python/avro/: test_message.avsc
python/sandbox/: console_consumer.py  console_producer.py
python/sandbox/avro/: schema.py
python/sandbox/kafka/: avro_consumer.py  avro_producer.py  avro_schemas.py  consumer.py  producer.py
(+40 files in other folders)
