[metadata]
name = kafka-sandbox
author = Corey Fritz
author_email = corey.fritz@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
platforms =
    MacOS X
    Linux
description = Playground for exploring features of Kafka using Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/97nitt/kafka-sandbox/python

[options]
packages = find:
zip_safe = true
install_requires =
    confluent-kafka==1.5.0
    fastavro==1.2.0
    requests==2.25.0
python_requires = >=3.8
setup_requires =
    setuptools>=42
tests_require =

[options.entry_points]
console_scripts =
    console-consumer = sandbox.console_consumer
    console-producer = sandbox.console_producer
